--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Chamika Sudusinghe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Chamika</strong> <span>Sudusinghe</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,29 +24,29 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
+							<li><a href="landing.html">Researcher</a></li>
+							<li><a href="generic.html">Volunteer</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="#" class="button primary fit">Resume</a></li>
+							<!-- <li><a href="#" class="button fit">Log In</a></li> -->
 						</ul>
 					</nav>
 
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
-							<header class="major">
-								<h1>Hi, my name is Forty</h1>
-							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<img class="img-responsive" id="img" alt="profile photo" src="images/chamika.jpg" class="hoverZoomLink">
+								<p>Chamika is a final year undergraduate at the Department of Computer Science and Engineering, University of Moratuwa specializing in Integrated Computer Engineering.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Resume</a></li>
 								</ul>
 							</div>
+							<header class="major">
+								<h1>Chamika Sudusinghe</h1>
+							</header>
 						</div>
 					</section>
 
@@ -65,7 +60,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
+										<h3><a href="landing.html" class="link">Engineer</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -74,7 +69,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
+										<h3><a href="landing.html" class="link">Researcher</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -83,7 +78,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<h3><a href="landing.html" class="link">Volunteer</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -92,7 +87,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">Traveller</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
@@ -101,7 +96,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
+										<h3><a href="landing.html" class="link">Education</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -110,7 +105,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
+										<h3><a href="landing.html" class="link">Awards</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
@@ -120,67 +115,39 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>News Highlights</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+									<ul>
+										<li> <b>Apr 02, 2022:</b> Selected as the winner <b>the Lance Stafford Larson Award</b> for undergraduates by the IEEE Computer Society.</li>
+										<li> <b>Feb 23, 2022:</b> Selected as a winner of <b>the Upsilon Pi Epsilon Honor Society Award</b> by the Upsilon Pi Epsilon Honor Society.</li>
+										<li> <b>Jan 23, 2022:</b> Selected as the winner of <b>the Section Oustanding Student Volunteer Award</b> in IEEE Sri Lanka Section.</li>
+										<li> <b>Oct 02, 2021:</b> Participated at the poster presentations in <b>the ACM Student Research Competition</b> at MICRO 2021.</li>
+										<li> <b>Sep 11, 2021:</b> Extended abstarct was selected for the 2nd round of <b>the ACM Student Research Competition</b> at MICRO 2021.</li>
 									</ul>
+									<!-- <ul class="actions">
+										<li><a href="landing.html" class="button next">Get Started</a></li>
+									</ul> -->
 								</div>
 							</section>
-
 					</div>
 
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
+							<div class="col">
+								<div class="contact-method">
+									<span class="icon solid alt fa-envelope"></span>
+									<h3>Email</h3>
+									<span>chamika'dot'sudusinghe'@'gmail'dot'com</span>
+								</div>
+							</div>
+							<div class="col">
+								<div class="contact-method">
+									<span class="icon solid alt fa-home"></span>
+									<h3>Address</h3>
+									<span>Matara, Sri Lanka</span>
+								</div>
+							</div>
 						</div>
 					</section>
 
@@ -188,14 +155,14 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/chamikasudusinghe/" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/chaamica" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/chamikasudusinghe" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.facebook.com/chamikasudusinghe/" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/chamikasudusinghe" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2022 Chamika Sudusinghe </li><li>Design Credits: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
