--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 	<head>
 		<title>Chamika Sudusinghe</title>
+		<link rel="shortcut icon" href="images/title.png" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -24,9 +29,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
+							<li><a href="landing.html">Engineer</a></li>
 							<li><a href="landing.html">Researcher</a></li>
 							<li><a href="generic.html">Volunteer</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">Traveller</a></li>
+							<li><a href="elements.html">Education</a></li>
+							<li><a href="elements.html">Awards</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Resume</a></li>
@@ -60,7 +68,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Engineer</a></h3>
+										<h3><span class="material-symbols-outlined"> engineering </span><a href="landing.html" class="link">Engineer</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -69,43 +77,43 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Researcher</a></h3>
+										<h3><span class="material-symbols-outlined"> school </span><a href="landing.html" class="link">Researcher </a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Volunteer</a></h3>
+										<h3><span class="material-symbols-outlined"> group </span><a href="landing.html" class="link">Volunteer</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Traveller</a></h3>
+										<h3><span class="material-symbols-outlined"> public </span><a href="landing.html" class="link">Traveller</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Education</a></h3>
+										<h3><span class="material-symbols-outlined"> book </span><a href="landing.html" class="link">Education</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Awards</a></h3>
+										<h3><span class="material-symbols-outlined"> grade </span><a href="landing.html" class="link">Awards</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
@@ -115,13 +123,14 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>News Highlights</h2>
+										<h2><span class="material-symbols-outlined"> feed </span>News Highlights</h2>
 									</header>
 									<ul>
+										<li> <b>Apr 02, 2022:</b> Became <b>the first student</b> to win all the student scholarships and awards by <b>the IEEE Computer Society.</b></li>
 										<li> <b>Apr 02, 2022:</b> Selected as the winner <b>the Lance Stafford Larson Award</b> for undergraduates by the IEEE Computer Society.</li>
 										<li> <b>Feb 23, 2022:</b> Selected as a winner of <b>the Upsilon Pi Epsilon Honor Society Award</b> by the Upsilon Pi Epsilon Honor Society.</li>
 										<li> <b>Jan 23, 2022:</b> Selected as the winner of <b>the Section Oustanding Student Volunteer Award</b> in IEEE Sri Lanka Section.</li>
-										<li> <b>Oct 02, 2021:</b> Participated at the poster presentations in <b>the ACM Student Research Competition</b> at MICRO 2021.</li>
+										<li> <b>Oct 02, 2021:</b> Participated for the poster presentations in <b>the ACM Student Research Competition</b> at MICRO 2021.</li>
 										<li> <b>Sep 11, 2021:</b> Extended abstarct was selected for the 2nd round of <b>the ACM Student Research Competition</b> at MICRO 2021.</li>
 									</ul>
 									<!-- <ul class="actions">
