--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Engineer</a></li>
-							<li><a href="landing.html">Researcher</a></li>
-							<li><a href="generic.html">Volunteer</a></li>
-							<li><a href="generic.html">Traveller</a></li>
+							<li><a href="landing.html">Career</a></li>
+							<li><a href="landing.html">Research</a></li>
+							<li><a href="generic.html">Volunteering</a></li>
+							<li><a href="generic.html">Travel</a></li>
 							<li><a href="elements.html">Education</a></li>
 							<li><a href="elements.html">Awards</a></li>
 						</ul>
@@ -68,7 +68,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> engineering </span><a href="landing.html" class="link">Engineer</a></h3>
+										<h3><span class="material-symbols-outlined"> engineering </span><a href="landing.html" class="link">Career</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -77,7 +77,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> school </span><a href="landing.html" class="link">Researcher </a></h3>
+										<h3><span class="material-symbols-outlined"> school </span><a href="landing.html" class="link">Research</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -86,7 +86,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> group </span><a href="landing.html" class="link">Volunteer</a></h3>
+										<h3><span class="material-symbols-outlined"> group </span><a href="landing.html" class="link">Volunteering</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -95,7 +95,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> public </span><a href="landing.html" class="link">Traveller</a></h3>
+										<h3><span class="material-symbols-outlined"> public </span><a href="landing.html" class="link">Travel</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
