career page first draft

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> engineering </span><a href="landing.html" class="link">Career</a></h3>
+										<h3><span class="material-symbols-outlined"> engineering </span><a href="career.html" class="link">Career</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -126,7 +126,7 @@
 										<h2><span class="material-symbols-outlined"> feed </span>News Highlights</h2>
 									</header>
 									<ul>
-										<li> <b>Apr 02, 2022:</b> Became <b>the first student</b> to win all the student scholarships and awards by <b>the IEEE Computer Society.</b></li>
+										<li> <b>Apr 02, 2022:</b> Became <b>the first student</b> to win all the student scholarships and awards by <b>the IEEE Computer Society</b>.</li>
 										<li> <b>Apr 02, 2022:</b> Selected as the winner <b>the Lance Stafford Larson Award</b> for undergraduates by the IEEE Computer Society.</li>
 										<li> <b>Feb 23, 2022:</b> Selected as a winner of <b>the Upsilon Pi Epsilon Honor Society Award</b> by the Upsilon Pi Epsilon Honor Society.</li>
 										<li> <b>Jan 23, 2022:</b> Selected as the winner of <b>the Section Oustanding Student Volunteer Award</b> in IEEE Sri Lanka Section.</li>
