research page added

--- a/research.html
+++ b/research.html
@@ -44,13 +44,13 @@
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="career">
+					<section id="banner" class="research">
 						<div class="inner">
 							<span class="image">
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Career</h1>
+								<h1>Research</h1>
 							</header>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet nullam consequat<br />
@@ -76,55 +76,55 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/wso2.png" alt="" data-position="center center" />
+										<img src="images/gsoc.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> api </span>Software Engineer (May 2022 - Present)</h3>
+												<h3><span class="material-symbols-outlined"> monitoring </span>VLSI Power Planning and Analysis (Jun. 2022 - Sep. 2022)</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project.</p>
 											<ul class="actions">
-												<li><a href="https://wso2.com" target="_blank" class="button">WSO2, Inc.</a></li>
+												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">Center for Research in Open Source Software</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/cb.png" alt="" data-position="top center" />
+										<img src="images/ufl.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> insights </span>Chief Growth Officer (Oct. 2020 - Present)</h3>
+												<h3><span class="material-symbols-outlined"> psychology </span>Network-on-Chip Attack Detection (Mar. 2020 - Present)</h3>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="https://circuitbreakerssl.com" target="_blank" class="button">CircuitBreakers Robotics</a></li>
+												<li><a href="https://www.cise.ufl.edu/research/cad/index.html" target="_blank" class="button">Embedded Systems Lab</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/uom.png" alt="" data-position="25% 25%" />
+										<img src="images/latrobe.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> lan </span>Teaching Assitant (Jul. 2021 - Jun. 2022)</h3>
+												<h3><span class="material-symbols-outlined"> analytics </span>Interpretable Predictive Modeling (Oct. 2020 - Present)</h3>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="https://uom.lk/" target="_blank" class="button">University of Moratuwa</a></li>
+												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Centre for Data Analytics and Cognition</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/liveroom.png" alt="" data-position="top center" />
+										<img src="images/latrobe.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
