modifications to research page

--- a/research.html
+++ b/research.html
@@ -144,8 +144,28 @@
 							<section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>Publications</h2>
 									</header>
+									<h3>Conference Publications</h3>
+									<li>
+										<span style="font-weight:350"><b>Denial-of-Service Attack Detection using Machine Learning in Network-on-Chip Architectures</b></span> [<a href=https://ieeexplore.ieee.org/document/9634932>PDF</a>]<br>
+										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
+										International Symposium on Networks-on-Chip (NOCS), October 8-15, 2021<br>
+										<br>
+									</li>
+									<li>
+										<span style="font-weight:350"><b>Hardware-Assisted Malware Detection using Machine Learning</b></span> [<a href=https://ieeexplore.ieee.org/document/9474050>PDF</a>]<br>
+										Zhixin Pan, Jennifer Sheldon, <u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
+										Design Automation and Test in Europe (DATE), Grenoble, France, February 1-5, 2021<br>
+										<br>
+									</li>
+									<h3>Book Chapters</h3>
+									<li>
+										<span style="font-weight:350"><b>Network-on-Chip Attack Detection using Machine Learning</b></span> [<a href=https://link.springer.com/chapter/10.1007/978-3-030-69131-8_10>PDF</a>]<br>
+										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
+										Springer Book on Network-on-Chip Security and Privacy, 2021<br>
+										<br>
+									</li>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button next">Get Started</a></li>
