--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> school </span><a href="landing.html" class="link">Research</a></h3>
+										<h3><span class="material-symbols-outlined"> school </span><a href="research.html" class="link">Research</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
