all pages added as drafts

--- a/career.html
+++ b/career.html
@@ -29,12 +29,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Career</a></li>
-							<li><a href="landing.html">Research</a></li>
-							<li><a href="generic.html">Volunteering</a></li>
-							<li><a href="generic.html">Travel</a></li>
-							<li><a href="elements.html">Education</a></li>
-							<li><a href="elements.html">Awards</a></li>
+							<li><a href="career.html">Career</a></li>
+							<li><a href="researcg.html">Research</a></li>
+							<li><a href="volunteering.html">Volunteering</a></li>
+							<li><a href="travel.html">Travel</a></li>
+							<li><a href="education.html">Education</a></li>
+							<li><a href="awards.html">Awards</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Resume</a></li>
@@ -47,7 +47,7 @@
 					<section id="banner" class="career">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
+								<img src="images/background.jpg" alt="" />
 							</span>
 							<header class="major">
 								<h1>Career</h1>
@@ -81,7 +81,8 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> api </span>Software Engineer (May 2022 - Present)</h3>
+												<h3><span class="material-symbols-outlined"> api </span>Software Engineer</h3>
+												<h4>May 2022 - Present</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
@@ -97,7 +98,8 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> insights </span>Chief Growth Officer (Oct. 2020 - Present)</h3>
+												<h3><span class="material-symbols-outlined"> insights </span>Chief Growth Officer</h3>
+												<h4>Oct. 2020 - Present</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
@@ -113,7 +115,8 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> lan </span>Teaching Assitant (Jul. 2021 - Jun. 2022)</h3>
+												<h3><span class="material-symbols-outlined"> lan </span>Teaching Assitant</h3>
+												<h4>Jul. 2021 - Jun. 2022</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
@@ -129,7 +132,8 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> view_in_ar </span>Trainee Computer Engineer (Oct. 2020 - Apr. 2021)</h3>
+												<h3><span class="material-symbols-outlined"> view_in_ar </span>Trainee Computer Engineer</h3>
+												<h4>Oct. 2020 - Apr. 2021</h4>
 											</header>
 											<p>Developed a mechanism to generate alpha mattes via a deep learning methodology for different camera perspectives using a point cloud of a 3D object with a large number of points for an automated multi-view 3D reconstruction pipeline.</p>
 											<ul class="actions">
@@ -162,7 +166,7 @@
 							<div class="contact-method">
 								<span class="icon solid alt fa-envelope"></span>
 								<h3>Email</h3>
-								<span>chamika'dot'sudusinghe'@'gmail'dot'com</span>
+								<span>chamika[DOT]sudusinghe[AT]gmail[DOT]com</span>
 							</div>
 						</div>
 						<div class="col">
