--- a/education.html
+++ b/education.html
@@ -44,13 +44,13 @@
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="research">
+					<section id="banner" class="education">
 						<div class="inner">
 							<span class="image">
 								<img src="images/background.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Research</h1>
+								<h1>Education</h1>
 							</header>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet nullam consequat<br />
@@ -76,29 +76,29 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/gsoc.png" alt="" data-position="center center" />
+										<img src="images/uom.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>VLSI Power Planning and Analysis</h3>
-												<h4>Jun. 2022 - Sep. 2022</h4>
+												<h3><span class="material-symbols-outlined"> monitoring </span>University of Moratuwa, Sri Lanka</h3>
+												<h4>Aug. 2017 - Jun. 2022</h4>
 											</header>
-											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<p>CSE</p>
 											<ul class="actions">
-												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">CROSS</a></li>
+												<li><a href="https://uom.lk/" target="_blank" class="button">University of Moratuwa</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/ufl.png" alt="" data-position="top center" />
+										<img src="images/rcm.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> psychology </span>Network-on-Chip Attack Detection</h3>
+												<h3><span class="material-symbols-outlined"> psychology </span>Rahula College, Matara</h3>
 												<h4>Mar. 2020 - Present</h4>
 											</header>
 											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
