--- a/volunteering.html
+++ b/volunteering.html
@@ -44,13 +44,13 @@
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="research">
+					<section id="banner" class="volunteering">
 						<div class="inner">
 							<span class="image">
 								<img src="images/background.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Research</h1>
+								<h1>Volunteering</h1>
 							</header>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet nullam consequat<br />
