--- a/elements.html
+++ b/elements.html
@@ -467,7 +467,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							<div class="contact-method">
 								<span class="icon solid alt fa-envelope"></span>
 								<h3>Email</h3>
-								<span>chamika'dot'sudusinghe'@'gmail'dot'com</span>
+								<span>chamika[DOT]sudusinghe[AT]gmail[DOT]com</span>
 							</div>
 						</div>
 						<div class="col">
