--- a/generic.html
+++ b/generic.html
@@ -64,7 +64,7 @@
 							<div class="contact-method">
 								<span class="icon solid alt fa-envelope"></span>
 								<h3>Email</h3>
-								<span>chamika'dot'sudusinghe'@'gmail'dot'com</span>
+								<span>chamika[DOT]sudusinghe[AT]gmail[DOT]com</span>
 							</div>
 						</div>
 						<div class="col">
