--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Career</a></li>
-							<li><a href="landing.html">Research</a></li>
-							<li><a href="generic.html">Volunteering</a></li>
-							<li><a href="generic.html">Travel</a></li>
-							<li><a href="elements.html">Education</a></li>
-							<li><a href="elements.html">Awards</a></li>
+							<li><a href="career.html">Career</a></li>
+							<li><a href="researcg.html">Research</a></li>
+							<li><a href="volunteering.html">Volunteering</a></li>
+							<li><a href="travel.html">Travel</a></li>
+							<li><a href="education.html">Education</a></li>
+							<li><a href="awards.html">Awards</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Resume</a></li>
@@ -65,7 +65,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/cover01.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> engineering </span><a href="career.html" class="link">Career</a></h3>
@@ -74,7 +74,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/cover02.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> school </span><a href="research.html" class="link">Research</a></h3>
@@ -83,37 +83,37 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/cover02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> group </span><a href="landing.html" class="link">Volunteering</a></h3>
+										<h3><span class="material-symbols-outlined"> group </span><a href="volunteering.html" class="link">Volunteering</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/cover01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> public </span><a href="landing.html" class="link">Travel</a></h3>
+										<h3><span class="material-symbols-outlined"> public </span><a href="travel.html" class="link">Travel</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/cover01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> book </span><a href="landing.html" class="link">Education</a></h3>
+										<h3><span class="material-symbols-outlined"> book </span><a href="education.html" class="link">Education</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/cover02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><span class="material-symbols-outlined"> grade </span><a href="landing.html" class="link">Awards</a></h3>
+										<h3><span class="material-symbols-outlined"> grade </span><a href="awards.html" class="link">Awards</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
@@ -147,7 +147,7 @@
 								<div class="contact-method">
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Email</h3>
-									<span>chamika'dot'sudusinghe'@'gmail'dot'com</span>
+									<span>chamika[DOT]sudusinghe[AT]gmail[DOT]com</span>
 								</div>
 							</div>
 							<div class="col">
