--- a/education.html
+++ b/education.html
@@ -108,40 +108,6 @@
 										</div>
 									</div>
 								</section>
-								<section>
-									<a href="generic.html" class="image">
-										<img src="images/latrobe.png" alt="" data-position="25% 25%" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3><span class="material-symbols-outlined"> analytics </span>Interpretable Predictive Modeling</h3>
-												<h4>Oct. 2020 - Present</h4>
-											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
-												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Centre for Data Analytics</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="generic.html" class="image">
-										<img src="images/latrobe.png" alt="" data-position="top center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3><span class="material-symbols-outlined"> view_in_ar </span>Trainee Computer Engineer</h3>
-												<h4>Oct. 2020 - Apr. 2021</h4>
-											</header>
-											<p>Developed a mechanism to generate alpha mattes via a deep learning methodology for different camera perspectives using a point cloud of a 3D object with a large number of points for an automated multi-view 3D reconstruction pipeline.</p>
-											<ul class="actions">
-												<li><a href="https://www.liveroom.xyz" target="_blank" class="button">LiveRoom (Pvt) Ltd</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
 							</section>
 
 						<!-- Three -->
@@ -150,7 +116,7 @@
 									<header class="major">
 										<h2>Publications</h2>
 									</header>
-									<h3>Conference Publications</h3>
+									<h3>Other Educational Certifications</h3>
 									<li>
 										<span style="font-weight:350"><b>Denial-of-Service Attack Detection using Machine Learning in Network-on-Chip Architectures</b></span> [<a href=https://ieeexplore.ieee.org/document/9634932>PDF</a>]<br>
 										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
