--- a/travel.html
+++ b/travel.html
@@ -81,7 +81,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>VLSI Power Planning and Analysis</h3>
+												<h3><span class="material-symbols-outlined"> monitoring </span>Article 01</h3>
 												<h4>Jun. 2022 - Sep. 2022</h4>
 											</header>
 											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
@@ -98,7 +98,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> psychology </span>Network-on-Chip Attack Detection</h3>
+												<h3><span class="material-symbols-outlined"> psychology </span>Article 02</h3>
 												<h4>Mar. 2020 - Present</h4>
 											</header>
 											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
@@ -115,29 +115,12 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> analytics </span>Interpretable Predictive Modeling</h3>
+												<h3><span class="material-symbols-outlined"> analytics </span>Article 03</h3>
 												<h4>Oct. 2020 - Present</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
 												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Centre for Data Analytics</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="generic.html" class="image">
-										<img src="images/latrobe.png" alt="" data-position="top center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3><span class="material-symbols-outlined"> view_in_ar </span>Trainee Computer Engineer</h3>
-												<h4>Oct. 2020 - Apr. 2021</h4>
-											</header>
-											<p>Developed a mechanism to generate alpha mattes via a deep learning methodology for different camera perspectives using a point cloud of a 3D object with a large number of points for an automated multi-view 3D reconstruction pipeline.</p>
-											<ul class="actions">
-												<li><a href="https://www.liveroom.xyz" target="_blank" class="button">LiveRoom (Pvt) Ltd</a></li>
 											</ul>
 										</div>
 									</div>
