--- a/career.html
+++ b/career.html
@@ -116,7 +116,7 @@
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> lan </span>Teaching Assitant</h3>
-												<h4>Jul. 2021 - Jun. 2022</h4>
+												<h4>Jul. 2021 - Jul. 2022</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
@@ -132,7 +132,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> view_in_ar </span>Trainee Computer Engineer</h3>
+												<h3><span class="material-symbols-outlined"> view_in_ar </span>Trainee Machine Learning Engineer</h3>
 												<h4>Oct. 2020 - Apr. 2021</h4>
 											</header>
 											<p>Developed a mechanism to generate alpha mattes via a deep learning methodology for different camera perspectives using a point cloud of a 3D object with a large number of points for an automated multi-view 3D reconstruction pipeline.</p>
