updated resume and news

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<li><a href="awards.html">Awards</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Resume</a></li>
+							<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button primary fit">Resume</a></li>
 							<!-- <li><a href="#" class="button fit">Log In</a></li> -->
 						</ul>
 					</nav>
@@ -126,6 +126,7 @@
 										<h2><span class="material-symbols-outlined"> feed </span>News Highlights</h2>
 									</header>
 									<ul>
+										<li> <b>Aug 20, 2022:</b> Reseach paper on "Eavesdropping Attack Detection" was accepted in NOCS 2022 and IEEE Design & Test.</li>
 										<li> <b>Apr 02, 2022:</b> Became <b>the first student</b> to win all the student scholarships and awards by <b>the IEEE Computer Society</b>.</li>
 										<li> <b>Apr 02, 2022:</b> Selected as the winner <b>the Lance Stafford Larson Award</b> for undergraduates by the IEEE Computer Society.</li>
 										<li> <b>Feb 23, 2022:</b> Selected as a winner of <b>the Upsilon Pi Epsilon Honor Society Award</b> by the Upsilon Pi Epsilon Honor Society.</li>
