added nirvana labs

--- a/career.html
+++ b/career.html
@@ -110,6 +110,23 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
+										<img src="images/nirvana.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> api </span>Data Science Intern</h3>
+												<h4>July 2022 - Septyember 2022</h4>
+											</header>
+											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<ul class="actions">
+												<li><a href="https://www.nirvanalabs.io/" target="_blank" class="button">Nirvana Labs</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
 										<img src="images/uom.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
