--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 										<h2><span class="material-symbols-outlined"> feed </span>News Highlights</h2>
 									</header>
 									<ul>
+										<li> <b>Oct 12, 2022:</b> Selected as the 2nd-Runner up of <b>the ACM SIGBED Student Research Competition</b> at the ES Week 2022.</li>
 										<li> <b>Aug 20, 2022:</b> Reseach paper on "Eavesdropping Attack Detection" was accepted in <b>NOCS 2022</b> and <b>IEEE Design & Test</b>.</li>
 										<li> <b>Apr 02, 2022:</b> Became <b>the first student</b> to win all the student scholarships and awards by <b>the IEEE Computer Society</b>.</li>
 										<li> <b>Apr 02, 2022:</b> Selected as the winner <b>the Lance Stafford Larson Award</b> for undergraduates by the IEEE Computer Society.</li>
