--- a/career.html
+++ b/career.html
@@ -115,7 +115,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> api </span>Data Science Intern</h3>
+												<h3><span class="material-symbols-outlined"> api </span>Data Scientist Intern</h3>
 												<h4>July 2022 - Septyember 2022</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
