--- a/career.html
+++ b/career.html
@@ -82,7 +82,7 @@
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> api </span>Software Engineer</h3>
-												<h4>May 2022 - Present</h4>
+												<h4>May 2022 - July 2023</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
@@ -99,7 +99,7 @@
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> insights </span>Chief Growth Officer</h3>
-												<h4>Oct. 2020 - Present</h4>
+												<h4>Oct. 2020 - Feb. 2023</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
@@ -116,7 +116,7 @@
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> api </span>Data Scientist Intern</h3>
-												<h4>July 2022 - Septyember 2022</h4>
+												<h4>July 2022 - Sept. 2022</h4>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
