--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<div class="content">
-								<img class="img-responsive" id="img" alt="profile photo" src="images/chamika.jpg" class="hoverZoomLink">
-								<p>Chamika is a final year undergraduate at the Department of Computer Science and Engineering, University of Moratuwa specializing in Integrated Computer Engineering.</p>
+								<img class="img-responsive" id="img" alt="profile photo" src="images/chamika.jpeg" class="hoverZoomLink">
+								<p>Chamika is a PhD student at the Department of Computer Science, University of Illinois Urbana-Champaign. He received his Bachelor's from the Department of Computer Science and Engineering, University of Moratuwa specializing in Integrated Computer Engineering.</p>
 								<ul class="actions">
 									<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button next scrolly">Resume</a></li>
 								</ul>
@@ -126,14 +126,15 @@
 										<h2><span class="material-symbols-outlined"> feed </span>News Highlights</h2>
 									</header>
 									<ul>
-										<li> <b>Oct 12, 2022:</b> Selected as the 2nd-Runner up of <b>the ACM SIGBED Student Research Competition</b> at the ES Week 2022.</li>
-										<li> <b>Aug 20, 2022:</b> Reseach paper on "Eavesdropping Attack Detection" was accepted in <b>NOCS 2022</b> and <b>IEEE Design & Test</b>.</li>
+										<li> <b>Oct 12, 2022:</b> Selected as <b>the 2nd-Runner up</b> of <b>the ACM SIGBED Student Research Competition</b> at <b>the ES Week 2022</b>.</li>
+										<li> <b>Aug 20, 2022:</b> Reseach work on "Eavesdropping Attack Detection" was accepted in <b>NOCS 2022</b> and <b>IEEE Design & Test</b>.</li>
 										<li> <b>Apr 02, 2022:</b> Became <b>the first student</b> to win all the student scholarships and awards by <b>the IEEE Computer Society</b>.</li>
 										<li> <b>Apr 02, 2022:</b> Selected as the winner <b>the Lance Stafford Larson Award</b> for undergraduates by the IEEE Computer Society.</li>
 										<li> <b>Feb 23, 2022:</b> Selected as a winner of <b>the Upsilon Pi Epsilon Honor Society Award</b> by the Upsilon Pi Epsilon Honor Society.</li>
 										<li> <b>Jan 23, 2022:</b> Selected as the winner of <b>the Section Oustanding Student Volunteer Award</b> in IEEE Sri Lanka Section.</li>
 										<li> <b>Oct 02, 2021:</b> Participated for the poster presentations in <b>the ACM Student Research Competition</b> at MICRO 2021.</li>
 										<li> <b>Sep 11, 2021:</b> Extended abstarct was selected for the 2nd round of <b>the ACM Student Research Competition</b> at MICRO 2021.</li>
+										<li> <b>Jul 24, 2021:</b> Reseach work on "Denial-of-Service Attack Detection" was accepted in <b>NOCS 2021</b>.</li>
 									</ul>
 									<!-- <ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
@@ -166,10 +167,10 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/chamikasudusinghe/" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://twitter.com/chaamica" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.linkedin.com/in/chamikasudusinghe" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/chamisudusinghe" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://github.com/chamikasudusinghe" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.facebook.com/chamikasudusinghe/" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.facebook.com/chamikasudusinghe" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/chamikasudusinghe" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<ul class="copyright">
