updates to front page and education

--- a/education.html
+++ b/education.html
@@ -76,13 +76,30 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
+										<img src="images/uiuc.jpg" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> monitoring </span>University of Illinois Urbana-Champaign, Champaign, IL</h3>
+												<h4>Aug. 2023 - Present</h4>
+											</header>
+											<p>CSE</p>
+											<ul class="actions">
+												<li><a href="https://cs.illinois.edu/" target="_blank" class="button">University of Illinois Urbana-Champaign</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
 										<img src="images/uom.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> monitoring </span>University of Moratuwa, Sri Lanka</h3>
-												<h4>Aug. 2017 - Jun. 2022</h4>
+												<h4>Aug. 2017 - Jul. 2022</h4>
 											</header>
 											<p>CSE</p>
 											<ul class="actions">
@@ -99,7 +116,7 @@
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> psychology </span>Rahula College, Matara</h3>
-												<h4>Mar. 2020 - Present</h4>
+												<h4>Jan. 2003 - Aug. 2016</h4>
 											</header>
 											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
 											<ul class="actions">
