--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> engineering </span><a href="career.html" class="link">Career</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>Passion Fueled Professions</p>
 									</header>
 								</article>
 								<article>
@@ -78,7 +78,7 @@
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> school </span><a href="research.html" class="link">Research</a></h3>
-										<p>feugiat amet tempus</p>
+										<p>Curiosity Fuels Discoverys</p>
 									</header>
 								</article>
 								<article>
@@ -87,7 +87,7 @@
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> group </span><a href="volunteering.html" class="link">Volunteering</a></h3>
-										<p>Lorem etiam nullam</p>
+										<p>Empowering Through Giving Back</p>
 									</header>
 								</article>
 								<article>
@@ -96,7 +96,7 @@
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> public </span><a href="travel.html" class="link">Travel</a></h3>
-										<p>Nisl sed aliquam</p>
+										<p>Adventure Unveiled, One Step at a Time</p>
 									</header>
 								</article>
 								<article>
@@ -105,7 +105,7 @@
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> book </span><a href="education.html" class="link">Education</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>Learning Unleashes Potential</p>
 									</header>
 								</article>
 								<article>
@@ -114,7 +114,7 @@
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> grade </span><a href="awards.html" class="link">Awards</a></h3>
-										<p>Feugiat amet tempus</p>
+										<p>Forged in Dedication and Commitment</p>
 									</header>
 								</article>
 							</section>
