--- a/career.html
+++ b/career.html
@@ -53,8 +53,7 @@
 								<h1>Career</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Navigating a Odyssey of Many Faces, Embracing Growth, and Crafting a Lifelong Story of Dedication and Dreams.</p>
 							</div>
 						</div>
 					</section>
@@ -66,14 +65,48 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>From A Novice to A Continour Learner</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>Navigating a dynamic career path has been an odyssey filled with evolving roles and unexpected opportunities, each contributing to my growth and expertise. Embracing new challenges and dedicating myself to continuous learning, I've crafted a lifelong story of professional dedication, shaped by the pursuit of ambitious goals and the realization of career dreams within a rapidly changing landscape.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/uiuc.jpg" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> laptop_mac </span>Graduate Research Assistant</h3>
+												<h4>Aug. 2023 - Present</h4>
+											</header>
+											<p>Conducting experiments, organizing or analyzing data, collaborating with faculty in preparing publications and other research activitiess in the domains of computer architecture, compliers and transfer learning.</p>
+											<ul class="actions">
+												<li><a href="https://cs.illinois.edu/" target="_blank" class="button">University of Illinois Urbana-Champaign</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/nirvana.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> psychology </span>Data Scientist</h3>
+												<h4>Aug. 2023 - Present</h4>
+											</header>
+											<p>Analyze decentralized data to uncover insights guiding business decisions and develop analytics tools that can uncover hidden insights and guide decision-making in the dynamic and unpredictable realm of crypto.</p>
+											<ul class="actions">
+												<li><a href="https://www.nirvanalabs.io/" target="_blank" class="button">Nirvana Labs</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
 								<section>
 									<a href="generic.html" class="image">
 										<img src="images/wso2.png" alt="" data-position="center center" />
@@ -82,9 +115,9 @@
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> api </span>Software Engineer</h3>
-												<h4>May 2022 - July 2023</h4>
+												<h4>May 2022 - Jul. 2023</h4>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Developing and maintaining a platform to build, integrate, and expose digital services as managed Application Programming Interfaces (APIs) in the cloud, on-premise, and hybrid architectures.</p>
 											<ul class="actions">
 												<li><a href="https://wso2.com" target="_blank" class="button">WSO2, Inc.</a></li>
 											</ul>
@@ -101,26 +134,26 @@
 												<h3><span class="material-symbols-outlined"> insights </span>Chief Growth Officer</h3>
 												<h4>Oct. 2020 - Feb. 2023</h4>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Driving the CB's strategic growth initiatives, overseeing business development, and fostering partnerships to expand the company's presence in the STEM education domain.</p>
 											<ul class="actions">
-												<li><a href="https://circuitbreakerssl.com" target="_blank" class="button">CircuitBreakers Robotics</a></li>
+												<li><a href="https://www.linkedin.com/company/circuitbreakersrobotics/" target="_blank" class="button">CircuitBreakers Robotics</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/nirvana.png" alt="" data-position="center center" />
+										<img src="images/aegis.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> api </span>Data Scientist Intern</h3>
+												<h3><span class="material-symbols-outlined"> psychology </span>Data Scientist Intern</h3>
 												<h4>July 2022 - Sept. 2022</h4>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Assisting in the analysis of blockchain data, creating predictive models for decentralized trends, supporting the optimization of decentralized services of the organization.</p>
 											<ul class="actions">
-												<li><a href="https://www.nirvanalabs.io/" target="_blank" class="button">Nirvana Labs</a></li>
+												<li><a href="https://www.aegis.studio/" target="_blank" class="button">Aegis Studio</a></li>
 											</ul>
 										</div>
 									</div>
@@ -132,10 +165,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> lan </span>Teaching Assitant</h3>
+												<h3><span class="material-symbols-outlined"> lan </span>Teaching Assistant</h3>
 												<h4>Jul. 2021 - Jul. 2022</h4>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Conducting tutorials, grading assignments, providing student assistance, leading discussions and preparing teaching materials for the modules CS2042, CS3110, CS3052 and CS3953.</p>
 											<ul class="actions">
 												<li><a href="https://uom.lk/" target="_blank" class="button">University of Moratuwa</a></li>
 											</ul>
@@ -159,19 +192,6 @@
 										</div>
 									</div>
 								</section>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
 							</section>
 
 					</div>
