updated links for images career page

--- a/career.html
+++ b/career.html
@@ -74,7 +74,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://cs.illinois.edu/" target="_blank" class="image">
 										<img src="images/uiuc.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -85,13 +85,13 @@
 											</header>
 											<p>Conducting experiments, organizing or analyzing data, collaborating with faculty in preparing publications and other research activitiess in the domains of computer architecture, compliers and transfer learning.</p>
 											<ul class="actions">
-												<li><a href="https://cs.illinois.edu/" target="_blank" class="button">University of Illinois Urbana-Champaign</a></li>
+												<li><a href="c" target="_blank" class="button">University of Illinois Urbana-Champaign</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.nirvanalabs.io/" target="_blank" class="image">
 										<img src="images/nirvana.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -108,7 +108,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://wso2.coms" target="_blank" class="image">
 										<img src="images/wso2.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -125,7 +125,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.linkedin.com/company/circuitbreakersrobotics/" target="_blank" class="image">
 										<img src="images/cb.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -142,7 +142,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.aegis.studio/" target="_blank" class="image">
 										<img src="images/aegis.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -159,7 +159,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://uom.lk/" target="_blank" class="image">
 										<img src="images/uom.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -176,7 +176,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://www.liveroom.xyz" target="_blank" class="image">
 										<img src="images/liveroom.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
