--- a/career.html
+++ b/career.html
@@ -108,7 +108,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="https://wso2.coms" target="_blank" class="image">
+									<a href="https://wso2.com" target="_blank" class="image">
 										<img src="images/wso2.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
