update job role

--- a/career.html
+++ b/career.html
@@ -97,7 +97,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> psychology </span>Data Scientist</h3>
+												<h3><span class="material-symbols-outlined"> psychology </span>Machine Learning Engineer</h3>
 												<h4>Aug. 2023 - Present</h4>
 											</header>
 											<p>Analyze decentralized data to uncover insights guiding business decisions and develop analytics tools that can uncover hidden insights and guide decision-making in the dynamic and unpredictable realm of crypto.</p>
@@ -148,7 +148,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> psychology </span>Data Scientist Intern</h3>
+												<h3><span class="material-symbols-outlined"> psychology </span>Trainee Machine Learning Engineer</h3>
 												<h4>July 2022 - Sept. 2022</h4>
 											</header>
 											<p>Assisting in the analysis of blockchain data, creating predictive models for decentralized trends, supporting the optimization of decentralized services of the organization.</p>
